<?xml version="1.0"?>
<package format="2">
  <name>fast_lio_2d_mapper</name>
  <version>0.0.0</version>
  <description>Build and save 2D occupancy maps from FAST-LIO point clouds.</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
</package>
